<resources>
    <string name="app_name">CubeSolver</string>

    <!-- Home -->
    <string name="home_title">Rubic\'s\nCube\nSolver</string>
    <string name="tap_to_scan">Tap to scan your cube</string>

    <!-- Scan -->
    <string name="btn_scan">Scan</string>
    <string name="btn_rescan">Something Wrong? Tap to Rescan ↻</string>
    <string name="scan_page_title">Please follow the instructions to scan each face</string>

    <!-- Invalid -->
    <string name="invalid_tile">Oops!\nThis cube is\nInvalid</string>
    <string name="btn_retry">Tap to Retry ↻</string>

    <!-- Solution -->
    <string name="solve_title">Let\'s Start</string>
    <string name="guidance">Please hold the cube with the Yellow side up and the Green side facing you. Tap FINISH once the cube is solved.</string>
    <string name="btn_next_step">Next Step</string>
    <string name="btn_finish">Finish</string>
    <string name="details">Details</string>

    <!-- Result -->
    <string name="result_title">Congrats!</string>
    <string name="btn_home">Home Page</string>
    <string name="result_second_title">Cube Solved in</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_pitch">Pitch</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="settings_speech_language">Speech Language</string>
    <string name="settings_app_language">App Language</string>

    <!-- Spinner -->
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="speech_language_options">
        <item>English (UK)</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

    <string-array name="app_language_options">
        <item>English (UK)</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>


    <!-- History -->
    <string name="history_title">History</string>
    <string name="history_date_time_title">Date/Time</string>
    <string name="history_result_title">Result (mm:ss:ms)</string>




    <!-- solved dialog -->
    <string name="solved_dialog_title">Solved!!</string>
    <string name="solved_dialog_msg_prefix">Top : Yellow, Front : Green.</string>
    <string name="solved_dialog_positive">OK</string>
    <string name="solved_dialog_animation">Animation</string>
    <!-- invalid cube dialog -->
    <string name="invalid_dialog_title">Invalid Cube…</string>
    <string name="invalid_dialog_positive">RESET</string>
    <string name="invalid_dialog_neutral">FIX</string>
    <!-- Right Face? dialog-->
    <string name="right_face_dialog_title">Right Face?</string>
    <string name="right_face_dialog_negative">RESCAN</string>
    <string name="right_face_dialog_positive">YES</string>
</resources>