<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/view_konfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/result_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_result_image"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="120dp"
        android:contentDescription="This is a cube image"
        android:src="@drawable/cube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

    <TextView
        android:id="@+id/tv_result_second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_second_title"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_result_image"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_result_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Holder"
        android:textSize="@dimen/extra_large_content_text_size"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_second_title"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>