<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scan_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/scan_page_title"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/blue"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@id/scan_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_title"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/scan_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:hideAnimationBehavior="outward"
        app:layout_constraintBottom_toTopOf="@id/cube_view"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showAnimationBehavior="inward"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <com.example.cubesolver.CubeView
        android:id="@+id/cube_view"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@id/scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_indicator" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cube_view"
        app:layout_constraintBottom_toTopOf="@id/reset_button"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_retry"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_button" />


</androidx.constraintlayout.widget.ConstraintLayout>