<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/settings_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/settings_pitch"
        android:textColor="@color/black"
        android:textSize="@dimen/larger_content_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_title"
        android:layout_marginTop="80dp"/>

    <SeekBar
        android:id="@+id/seekBar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pitch"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/speech_rate"
        android:textColor="@color/black"
        android:textSize="@dimen/larger_content_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pitch"
        android:layout_marginTop="40dp"/>

    <SeekBar
        android:id="@+id/seekBar_rate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_speech_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speech Language                   English(UK)"
        android:textColor="@color/black"
        android:textSize="@dimen/larger_content_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_app_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="App Language                         English(UK)"
        android:textColor="@color/black"
        android:textSize="@dimen/larger_content_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_speech_language"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"/>

<!--    TODO 下拉菜单-->
</androidx.constraintlayout.widget.ConstraintLayout>